# multiCurrency

./: README.md  io.github.r_sergii.multiCurrency.json  meson.build  ua.inf.multiapps.multiCurrency.json
data/: io.github.r_sergii.multiCurrency.appdata.xml.in  io.github.r_sergii.multiCurrency.desktop.in  io.github.r_sergii.multiCurrency.gschema.xml  meson.build  ua.inf.multiapps.multiCurrency.appdata.xml.in  ua.inf.multiapps.multiCurrency.desktop.in  ua.inf.multiapps.multiCurrency.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  main.vala  meson.build  multicurrency.gresource.xml  window.ui  window.vala
src/services/appsload/: appsload_model.vala  appsload_provider.vala  appsload_service.vala
src/services/connect/: connect_model.vala  connect_provider.vala  connect_service.vala
src/services/currency/: currency_model.vala  currency_provider.vala  currency_service.vala
src/services/settings/: locale_model.vala  settings_model.vala  settings_service.vala  theme_model.vala
src/services/translate/: translate_model.vala  translate_provider.vala  translate_service.vala
src/utils/: date_round.vala  info_linux.c  info_linux.vala
src/widgets/circular_progress/: circular_progress.vala
src/widgets/fill_widget/: fill_widget.vala
src/widgets/rate_widget/: rate_widget.css  rate_widget.vala
src/widgets/theme_switcher/: theme_switcher.css  theme_switcher.vala
src/windows/language_window/: language_window.ui  language_window.vala
src/windows/main_window/: main_window.ui  main_window.vala
src/windows/no_connect_window/: no_connect_window.vala
src/windows/splash_window/: splash_window.vala
